@@ -1,0 +1,3 @@
+---
+plugins:
+  - PlugAuth::Plugin::Test: {}
